# rfpm

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: lint-pr.yml  release.yml
src/: arch.rs  content.rs  lib.rs
src/distro/: arch.rs  deb.rs  mod.rs  rpm.rs
tests/: integration.rs
